--- a/WebDriver/test-output/index.html
+++ b/WebDriver/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\WBL\AppData\Local\Temp\testng-eclipse-1172999214\testng-customsuite.xml</span>
+                    <span>C:\Users\WBL\AppData\Local\Temp\testng-eclipse--504338906\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.wbl.basics.HomePage" hash-for-method="searchBox">searchBox</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.wbl.basics.SelectAndRadioAndWebElementMethods" hash-for-method="registerExampleWithWebElementMethods">registerExampleWithWebElementMethods</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.wbl.basics.SelectAndRadioAndWebElementMethods" hash-for-method="selectExample">selectExample</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +125,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.wbl.basics.HomePage</span>
+              <span class="class-name">com.wbl.basics.SelectAndRadioAndWebElementMethods</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="searchBox">
-                  </a> <!-- searchBox -->
-                  <span class="method-name">searchBox</span>
+                  <a name="registerExampleWithWebElementMethods">
+                  </a> <!-- registerExampleWithWebElementMethods -->
+                  <span class="method-name">registerExampleWithWebElementMethods</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="selectExample">
+                  </a> <!-- selectExample -->
+                  <span class="method-name">selectExample</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +147,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\WBL\AppData\Local\Temp\testng-eclipse-1172999214\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\WBL\AppData\Local\Temp\testng-eclipse--504338906\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +156,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.wbl.basics.HomePage&quot;/&gt;
+      &lt;class name=&quot;com.wbl.basics.SelectAndRadioAndWebElementMethods&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -184,16 +196,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'searchBox')
-data.setCell(0, 2, 'com.wbl.basics.HomePage')
-data.setCell(0, 3, 2830);
+data.setCell(0, 1, 'selectExample')
+data.setCell(0, 2, 'com.wbl.basics.SelectAndRadioAndWebElementMethods')
+data.setCell(0, 3, 8236);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'registerExampleWithWebElementMethods')
+data.setCell(1, 2, 'com.wbl.basics.SelectAndRadioAndWebElementMethods')
+data.setCell(1, 3, 7761);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 15 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -208,16 +224,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">1 ignored method</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">com.wbl.basics.HomePage</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">testRegister</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -226,18 +235,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.wbl.basics.HomePage</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.wbl.basics.SelectAndRadioAndWebElementMethods</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">beforeClass</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">searchBox</span>
-                <span class="method-start">6109 ms</span>
+                <span class="method-name">registerExampleWithWebElementMethods</span>
+                <span class="method-start">8128 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">selectExample</span>
+                <span class="method-start">15891 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
-                <span class="method-name">afterMethod</span>
-                <span class="method-start">8940 ms</span>
+                <span class="method-name">afterClass</span>
+                <span class="method-start">24128 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
