--- a/WebDriver/test-output/old/Default suite/classes.html
+++ b/WebDriver/test-output/old/Default suite/classes.html
@@ -4,18 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.wbl.basics.HomePage</td>
+<td>com.wbl.basics.SelectAndRadioAndWebElementMethods</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testRegister</td>
+<td>registerExampleWithWebElementMethods</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>searchBox</td>
+<td>selectExample</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -35,6 +35,6 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>afterMethod</td>
+<td>afterClass</td>
 <td>&nbsp;</td></tr>
 </table>
